
[TestReportSummary_FullBlock - 1]
├── ✔ since   latest release → v0.14.0  a3b4c5d  Jan 15 2026
└── ✔ until   HEAD → v0.18.0  f1e2d3c  May 4 2026

Evidence
├── ✔ commits         47   (32 associated)
├── ✔ issues          73   (42 kept)
└── ✔ pull requests   164  (87 kept)

Changes
├── major   removed=1
├── minor   added=3 changed=5
└── patch   fixed=11

v0.18.0 → v0.19.0   (minor bump)
---

[TestReportSummary_NoSpeculation - 1]
├── ✔ since   v0.14.0 → v0.14.0  a3b4c5d  Jan 15 2026
└── ✔ until   HEAD → v0.18.0  f1e2d3c  May 4 2026

Evidence
├── ✔ commits         47   (32 associated)
├── ✔ issues          73   (42 kept)
└── ✔ pull requests   164  (87 kept)

Changes
├── major   removed=1
├── minor   added=3 changed=5
└── patch   fixed=11
---

[TestReportSummary_NoBump - 1]
Changes
├── major   removed=1
├── minor   added=3 changed=5
└── patch   fixed=11

v0.18.0 → v0.18.0   (no bump)
---

[TestReportSummary_MajorBump - 1]
Changes
├── major   removed=1
├── minor   added=3 changed=5
└── patch   fixed=11

v0.18.0 → v1.0.0   (major bump)
---

[TestReportSummary_PatchBump - 1]
Changes
├── major   removed=1
├── minor   added=3 changed=5
└── patch   fixed=11

v0.18.0 → v0.18.1   (patch bump)
---
